# dream-prompter

./: AGENTS.md  CODEBASE_ISSUES_CHECKLIST.md  README.md  REPLICATE_IMPLEMENTATION_PLAN.md  REPLICATE_MIGRATION_PLAN.md  REPLICATE_MODEL_INPUTS.md  REPLICATE_REFERENCE_INVENTORY.md  api.py  constants.py  dialog.py  dialog_events.py  dialog_gtk.py  dialog_threads.py  dream-prompter.py  i18n.py  integrator.py  pyproject.toml  settings.py  ui_file_management.py  ui_interfaces.py  ui_mode_selection.py  ui_model_config.py  ui_prompt_input.py  ui_status_progress.py
.kilocode/rules/memory-bank/: architecture.md  brief.md  context.md  product.md  tech.md
locale/: bn.po  dream-prompter.pot  es.po  fr.po  hi.po  ja.po  ko.po  pt.po  ru.po  zh_CN.po  zh_TW.po
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: build-translations.py  update-pot.py  update-translations.py
