[tool.pyright]
stubPath = "./stubs"
typeCheckingMode = "basic"
reportMissingModuleSource = false

[tool.ruff]
exclude = ["stubs"]

[project]
name = "dream-prompter"
version = "1.1.1"
description = "AI-powered image creation/editing with selectable Replicate models"
authors = [
    {name = "Josh Ellithorpe, sefra dama"}
]
dependencies = [
    "replicate",
    "cryptography"
]
